--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,24 @@
 .navbar {
     background-color: rgba(31, 39, 27, .9);
+    height:150px;
     
 }
 .navbar-brand {
     font-family: 'Bebas Neue', cursive;
     font-size:30px;
+    }
+.nav-link {
+    font-family:'Roboto Slab', serif;
 }
-.nav-item {
-    color:white;
+#mainimg {
+    width:100%;
+    height:600px;
+    overflow:hidden;
+    }
+#park {
+    object-fit:contain;
+    height:auto;
+    width:100%;
 }
+
+
