--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,5 +20,20 @@
     height:auto;
     width:100%;
 }
+footer {
+    height:150px;
+    background-color: rgba(31, 39, 27, .9);
+    
+}
+.col {
+    text-align:center; 
+    font-size:30px;   
+}
+.row {
+    padding-top:65px;
+    
+}
+    
+
 
 
