--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,19 +10,11 @@
 .nav-link {
     font-family:'Roboto Slab', serif;
 }
-#mainimg {
-    width:100%;
-    height:600px;
-    overflow:hidden;
-    }
-#park {
-    object-fit:contain;
-    height:auto;
-    width:100%;
-}
+
 footer {
     height:150px;
     background-color: rgba(31, 39, 27, .9);
+    
     
 }
 .col {
@@ -33,7 +25,18 @@ footer {
     padding-top:65px;
     
 }
+.description {
+    width:100%;
+    height:700px;
+} 
+.description img {
+     overflow:hidden;
+     height:400px;
+     width:400px;
+     
+ }
     
+ 
 
 
 
