--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,19 +15,16 @@ body {
     color:#fff;
 }
 
-footer {
+.container-footer {
     height:150px;
     background-color: rgba(31, 39, 27, .9);
-    margin-top:100% auto;
+    margin-top:100%;
 }
-footer .col {
-    text-align:center; 
+.container-footer .col {
+    text-align: center; 
     font-size:30px;   
 }
-footer .row {
-    padding-top:65px;
-    
-}
+
 .main-grid {
     width:100%;
     height:450px;
@@ -49,7 +46,7 @@ footer .row {
      height:300px;
      text-align:center;
      font-family:'Roboto Slab', serif;
-     font-size:25px;
+     font-size:20px;
      padding: 0px 50px 0px 50px;
  }
  .welcome h3 {
