--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,19 @@ body {
 }
 .navbar-brand {
     font-family: 'Bebas Neue', cursive;
-    font-size:30px;
+    font-size:50px;
     }
+#logo {
+    color:#9D8420;
+}
 .nav-link {
     font-family:'Roboto Slab', serif;
-    color:#fff;
+    }
+
+#link {
+    color:yellow;
 }
+
 
 .container-footer {
     height:100px;
@@ -33,11 +40,15 @@ body {
 .container-footer .col {
     text-align: center; 
     font-size:30px;
-       
+    
+    }
+.container-footer .col i {
+    color:yellow;
 }
 .container-footer > .row {
     height:100px;
 }
+
 
 .main-grid {
     width:100%;
@@ -46,8 +57,8 @@ body {
 } 
 .main-grid img {
      overflow:hidden;
-     width:400px;
-     height:300px;
+     width:450px;
+     height:350px;
      
  }
  .main-grid h3 {
