--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-color: #CEF7A0;
+    background-color: #cff7a0fd;
     min-height: 100vh;
 
 }
@@ -76,8 +76,8 @@ body {
 
 .main-grid img {
     overflow: hidden;
-    width: 450px;
-    height: 350px;
+    width: 100%;
+    height: auto;
 
 }
 
@@ -97,4 +97,13 @@ body {
 
 .welcome h3 {
     font-weight: bold;
+}
+
+@media screen and (min-width:576px) {
+    .main-grid img {
+        overflow: hidden;
+        width: 450px;
+        height: 350px;
+
+    }
 }
