--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,29 @@ body {
 
     }
 }
+
+/*activities.html CSS */
+.activity-list {
+    border: 1px solid;
+    background-color: grey;
+    border-radius: 5%;
+
+}
+
+h6 {
+    font-family: 'Roboto Slab', serif;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+ul>li {
+    font-family: 'Roboto Slab', serif;
+    font-size: 14pt;
+
+}
+
+.activity-list h3 {
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Roboto Slab', serif;
+}
