--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html {
 body {
     background-color: #cff7a0fd;
     min-height: 100vh;
+    font-family: 'Roboto Slab', serif;
 
 }
 
@@ -109,10 +110,22 @@ body {
 }
 
 /*activities.html CSS */
+.routes>li {
+
+    font-weight: normal;
+}
+
+.cycling-routes>li {
+    font-weight: bold;
+
+}
+
 .activity-list {
     border: 1px solid;
     background-color: grey;
     border-radius: 5%;
+    padding-bottom: 3px;
+    margin-bottom: 5px;
 
 }
 
@@ -132,4 +145,9 @@ ul>li {
     text-align: center;
     font-weight: bolder;
     font-family: 'Roboto Slab', serif;
+
+}
+
+.activity-list iframe {
+    padding: 5px 5px 5px 5px;
 }
