--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ body {
 .activity-list {
     border: 1px solid;
     background-color: grey;
-    border-radius: 5%;
+    border-radius: 10%;
     padding-bottom: 3px;
     margin-bottom: 5px;
 
@@ -150,4 +150,18 @@ ul>li {
 
 .activity-list iframe {
     padding: 5px 5px 5px 5px;
+}
+
+.activities h3 {
+    text-decoration: underline;
+}
+
+#pod {
+    width: 50%;
+    height: auto;
+}
+
+#edwinstowe-map {
+    width: 100%;
+
 }
