--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,3 +165,28 @@ ul>li {
     width: 100%;
 
 }
+
+/*area.html CSS */
+.container-video {
+    margin: 0;
+    padding: 0;
+}
+
+#thoresby-vale {
+    width: 100%;
+    height: 100%;
+}
+
+.video-text {
+    margin: 15px 0px 0px 15px;
+}
+
+.container-video h3 {
+    text-align: center;
+    font-weight: bolder;
+    font-family: 'Roboto Slab', serif;
+}
+
+.developers a {
+    color: black;
+}
