--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,19 @@ body {
     text-align: center;
 }
 
+.row-home {
+    background-color: #fff;
+    padding: 10px;
+    margin: 0px 10px 10px 10px;
+    border-radius: 20%;
+    border: 2px solid;
+}
+
+.container-home {
+    margin: 0;
+    padding: 0;
+}
+
 .welcome {
     width: 100%;
     text-align: center;
@@ -110,6 +123,16 @@ body {
 }
 
 /*activities.html CSS */
+.row-contain {
+    background-color: #fff;
+    border: 2px solid;
+    margin-bottom: 20px;
+}
+
+.activity-text {
+    padding: 10px;
+}
+
 .routes>li {
 
     font-weight: normal;
@@ -121,12 +144,10 @@ body {
 }
 
 .activity-list {
-    border: 1px solid;
-    background-color: grey;
-    border-radius: 10%;
-    padding-bottom: 3px;
-    margin-bottom: 5px;
-
+    border: 2px solid;
+    background-color: #fff;
+    margin: 0px 15px 15px 15px;
+    padding: 5px;
 }
 
 h6 {
@@ -149,11 +170,12 @@ ul>li {
 }
 
 .activity-list iframe {
-    padding: 5px 5px 5px 5px;
+    padding: 5px 5px 0px 5px;
 }
 
 .activities h3 {
     text-decoration: underline;
+    text-align: center;
 }
 
 #pod {
@@ -163,6 +185,7 @@ ul>li {
 
 #edwinstowe-map {
     width: 100%;
+    padding: 5px;
 
 }
 
@@ -175,10 +198,19 @@ ul>li {
 #thoresby-vale {
     width: 100%;
     height: 100%;
+    border: 2px solid;
+}
+
+.video {
+    padding: 0px;
 }
 
 .video-text {
-    margin: 15px 0px 0px 15px;
+    margin-left: 12px;
+    padding: 20px 0px 0px 20px;
+    background-color: #fff;
+    border: 2px solid;
+
 }
 
 .container-video h3 {
