--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ ul>li {
 
 /*contact.html CSS */
 .mb-3 {
-    padding: 20px 20px 0 20px;
+    padding: 0.5em;
     margin-right: 10px;
 }
 
@@ -312,7 +312,7 @@ ul>li {
 }
 
 .contact {
-    margin: 10px;
+    margin: 1em;
     background-color: rgb(182, 229, 186);
     border: 5px solid;
 
@@ -341,7 +341,7 @@ input.btn-custom:hover {
 .map {
     width: 100%;
     height: 50vh;
-    margin: 20px 20px 0px 0px;
+    margin-top: 1em;
 }
 
 .contact h3 {
