--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,8 +286,15 @@ ul>li {
 
 .oak img {
     width: 100%;
-    height: 50vh;
+    height: auto;
     margin-bottom: 20px;
+}
+
+@media screen and (min-width:1024px) {
+    .oak img {
+        height: 50vh;
+    }
+
 }
 
 .oak p {
