--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,8 @@ ul>li {
 #thoresby-vale {
     width: 100%;
     height: 100%;
-
+    border: 5px solid;
+    padding: 0;
 }
 
 
@@ -251,7 +252,7 @@ ul>li {
 }
 
 .container-video .row {
-    margin: 20px 0px 20px 0px;
+    margin: 1em 0em 1em 0em;
 }
 
 .container-video h3 {
