--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,17 @@
-/*general CSS*/
+/*-----------------------------------------general CSS-----------------------------------------*/
 html {
     max-width: 100%;
     overflow-x: hidden;
 }
 
 body {
-    /*background-image: url('../images/background-forest.jpg');
-    background-repeat: repeat;
-    background-size: contain;
-    min-height: 100vh;*/
+
 
     font-family: "Roboto Slab", serif;
     font-size: 14pt;
 }
 
-/*site navigation bar CSS*/
+/*-----------------------------------------site navigation bar CSS-----------------------------------------*/
 .navbar {
     background-color: rgba(31, 39, 27, 0.9);
 }
@@ -46,7 +43,7 @@ body {
     text-decoration: underline;
 }
 
-/*site footer CSS*/
+/*-----------------------------------------site footer CSS-----------------------------------------*/
 .container-footer {
     height: 100px;
     background-color: rgba(31, 39, 27, 0.9);
@@ -73,7 +70,7 @@ body {
     padding: 0px;
 }
 
-/*index.html CSS*/
+/*-----------------------------------------index.html CSS-----------------------------------------*/
 
 .main-grid {
     width: 100%;
@@ -117,7 +114,7 @@ body {
     text-align: center;
 }
 
-/*media queries*/
+/*-----------------------------------------media queries-----------------------------------------*/
 @media screen and (min-width: 576px) {
     .main-grid img {
         overflow: hidden;
@@ -138,7 +135,20 @@ body {
     }
 }
 
-/*activities.html CSS */
+@media screen and (min-width: 1024px) {
+    .oak img {
+        height: 50vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .pod {
+        width: 100%;
+        height: auto;
+    }
+}
+
+/*-----------------------------------------activities.html CSS-----------------------------------------*/
 .row-contain {
     background-color: rgb(182, 229, 186);
     border: 5px solid;
@@ -194,18 +204,11 @@ ul>li {
     height: auto;
 }
 
-@media screen and (max-width: 768px) {
-    .pod {
-        width: 100%;
-        height: auto;
-    }
-}
-
 #edwinstowe-map {
     width: 100%;
 }
 
-/*area.html CSS */
+/*-----------------------------------------area.html CSS-----------------------------------------*/
 .video {
     width: 100%;
     height: 50vh;
@@ -265,12 +268,6 @@ ul>li {
     margin-bottom: 20px;
 }
 
-@media screen and (min-width: 1024px) {
-    .oak img {
-        height: 50vh;
-    }
-}
-
 .oak p {
     text-align: center;
 }
@@ -281,7 +278,7 @@ ul>li {
     text-align: center;
 }
 
-/*contact.html CSS */
+/*-----------------------------------------contact.html CSS-----------------------------------------*/
 .mb-3 {
     padding: 0.5em;
     margin-right: 10px;
@@ -305,7 +302,6 @@ form label {
 input.btn-custom {
     background-color: #fad12e;
     border: none;
-    /* font-size: large; */
     padding: 0.6em;
     border-radius: 0.3em;
     margin-left: 1em;
