--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,13 +105,13 @@ body {
     width: 100%;
     text-align: center;
     font-family: "Roboto Slab", serif;
-    font-size: 14pt;
+    font-size: 1rem;
 }
 
 .welcome h3 {
     font-weight: bold;
-    font-size: x-large;
-    text-align: center;
+    font-size: 1.5rem;
+
 }
 
 /*-----------------------------------------media queries-----------------------------------------*/
